hphp/test/zend/bad/tests-lang/bug44827.php
<?php
define('::', true);
var_dump(constant('::'));
?>